--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -76,6 +76,7 @@
 
   &__close {
     display: flex;
+    justify-content: center;
     align-items: center;
     position: absolute;
     cursor: pointer;
